--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
-    "dev": "webpack-dev-server --config webpack.common.js --watch"
+    "dev": "webpack-dev-server --config webpack.common.js --watch",
+    "dev-fb": "webpack-dev-server --config webpack.fb.js --watch"
   },
   "author": "",
   "license": "ISC",
